# pu

./: .env  .gitignore  README.md  pyproject.toml
Dl_begin/: main.ipynb
Yolo_knife/: detection_history.db  train_model.ipynb  usage_bt_fastapi.ipynb  usage_bt_model.ipynb
Yolo_knife/runs/detect/train/: args.yaml
Yolo_knife/runs/detect/train-2/: args.yaml  results.csv
Yolo_knife/runs/detect/train-3/: args.yaml
Yolo_knife/runs/detect/train-4/: args.yaml
Yolo_knife/runs/detect/train-5/: args.yaml  results.csv
Yolo_knife/runs/detect/train-6/: args.yaml  results.csv
Yolo_knife/runs/detect/train-7/: args.yaml
itsc/auto_encoder/: main.ipynb  reconstruction_results.csv
itsc/cifri24.03/: Wgan.ipynb  main.ipynb
itsc/gan/: Wgan — копия.py  Wgan.ipynb
itsc/resnet/: main.ipynb
itsc/stepin_s_encoderom/: itsc-demo.ipynb  main.ipynb
itsc/vgg_+_stilization/: baseline copy.ipynb  baseline.ipynb  main.ipynb  nain.ipynb  neiro.ipynb  upper_stylization.ipynb
mb/: pyvenv.cfg
mb/Scripts/: activate  activate.bat  activate.fish
mediapipe_tutorial/: heart.ipynb  main.ipynb
vk_educ/1/: model_ckpt.pt
vk_educ/2/: Seminar_2_BPE.ipynb  Seminar_2_Transformer.ipynb
