[project]
name = "priceclassifier"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrey.Tarasenko",email = "andrey.tarasenko@siberianai.tsu.ru"}
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "unsloth (>=2026.1.4,<2027.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "torchvision (>=0.25.0,<0.26.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "captum (>=0.9.0,<0.10.0)",
    "grad-cam (>=1.5.5,<2.0.0)",
    "mediapipe (>=0.10.35,<0.11.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "ultralytics (>=8.4.81,<9.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)"
]

[tool.poetry.dependencies]
torch = {source = "pytorch-gpu"}
torchvision = {source = "pytorch-gpu"}
torchaudio = {source = "pytorch-gpu"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"
